# resume-viewer

./: .replit  Pasted-KeyError-KeyError-technical-skills-Traceback-most-recent-call-last-File-home-runner-resu-1734167439659.txt  app.py  criteria.py  main.py  mock_data.py  models.py  pyproject.toml  replit_zip_error_log.txt  scoring_api.py
.local/state/replit/agent/: repl_state.json
.upm/: store.json
instance/: resumes.db
resumes/: frontend.html  poc.py  resumeData.js  resumeViewer.js  resume_reader.py
resumes/assets/resumes/: ai_engineer_bad_bad.md  ai_engineer_so_so_good.md  ai_engineer_strong_bad.md  data_scientist_bad_good.md  data_scientist_so_so_bad.md  data_scientist_strong_good.md  product_owner_bad_good.md  product_owner_so_so_bad.md  product_owner_strong_good.md  versatile_bad_bad.md  versatile_so_so_bad.md  versatile_strong_good.md
static/js/: criteria.js  criteria_editor.js  rankings.js  scoring.js
templates/: criteria_editor.html  index.html  ranked_results.html  resume_list.html  scoring_result.html
