[project]
name = "repl-nix-new-repl"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "openai>=1.57.4",
    "sqlalchemy>=2.0.36",
    "psycopg2-binary",
    "email-validator",
    "uvicorn>=0.32.1",
    "pydantic>=2.10.3",
    "fastapi>=0.115.6",
]
